# assignment_management

./: .dockerignore  .gitignore  README.md  cdk.json  docker-compose.yml  ecs-compose.yml  ecs-params.yml  pyproject.toml  requirements.txt
app/: Dockerfile  app.py  requirements.txt  service.py  servise.py  task.py  uwsgi.ini  view.py
app/model/: models.py  setting.py
app/task/: task.py
app/templates/: add.html  index.html  layout.html
docker/: docker-compose.default.yml
docker/app/: Dockerfile  entrypoint.sh
docker/web/: Dockerfile  nginx.conf
docker/web/ssl/: make_key.sh  server.crt
front/: .eslintrc.js  package.json
front/src/: App.tsx  assignment-detail.tsx  assignment-list.tsx  constants.ts  course-detail.tsx  course-list.tsx  submission-detail.tsx  submission-list.tsx  user-register.tsx
front/src/components/: submission-list.tsx
src/: command.py  logging.json  main.py  pyproject.toml  settings.example.py  settings.py
src/domain/: AssignmentRepository.py  AssignmentState.py  CourseRepository.py  SchedulerRepository.py  SubmissionRepository.py  SubmissionState.py  UserRepository.py  __init__.py  assignment.py  base.py  conf.py  course.py  exception.py  scheduler.py  submission.py  user.py
src/domain/assignments/: AssignmentModel.py  AssignmentState.py
src/domain/courses/: CourseModel.py
src/domain/schedulers/: SchedulerModel.py
src/domain/submissions/: SubmissionModel.py  SubmissionState.py
src/domain/users/: UserModel.py
src/infrastructure/cert/: __init__.py  auth.py  private_key.pem  public_key.pem
src/infrastructure/crawl/: __init__.py  scraping.py
src/infrastructure/mail/: __init__.py  notify.py
src/infrastructure/postgresql/: BaseService.py  database.py
src/interface/controller/: ApiController.py  __init__.py
src/interface/driver/: AuthDriver.py  FetchDriver.py  ScrapingDriver.py
src/interface/presenter/: ProcessRequest.py
src/model/: models.py  setting.py
src/templates/: index.html  layout.html  user.html
src/usecase/: UsecaseUnitOfWork.py  __init__.py  token.py
tests/: conftest.py
tests/domain/: submission_test.py  user_test.py
tests/infrastracture/: auth_test.py  scraping_test.py
web/: nginx.conf
(+61 files in other folders)
