[tool.poetry]
name = "assignment_management"
version = "0.3.0"
description = ""
authors = ["zaemon1251-hesty <hisakawa1251@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
lxml = "^4.8.0"
urllib3 = "^1.26.8"
psycopg2 = "^2.9.3"
SQLAlchemy = "^1.4.31"
beautifulsoup4 = "^4.10.0"
pydantic = "^1.9.0"
fastapi = "^0.74.1"
uvicorn = "^0.17.5"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
jose = "^1.0.0"
python-multipart = "^0.0.5"
aiomysql = "^0.0.22"
asyncpg = "^0.25.0"
selenium = "3.141.0"
PyJWT = {extras = ["crypt"], version = "^2.3.0"}
sqlalchemy-migrate = "^0.13.0"
cryptography = "^37.0.2"
pycryptodome = "3.10.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.6.0"
flake8 = "^4.0.1"
pytest = "^7.0.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
